Closed
Bug 226155
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for accessible files
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
3.21 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/accessible/src/base/nsAccessibilityService.cpp&rev=1.100&mark=315#310
Deref-error: "aRootAcc"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/accessible/src/atk/nsAccessibleHyperText.cpp&rev=1.10&mark=509#504
Deref-error: "accText"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/accessible/src/msaa/nsAccessNodeWrap.cpp&rev=1.9&mark=409#404
Deref-error: "newNode"
Not bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/accessible/src/html/nsHTMLSelectAccessible.cpp&rev=1.33&mark=925#920
Deref-error: "accessible"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/accessible/src/html/nsHTMLSelectAccessible.cpp&rev=1.33&mark=973#968
Deref-error: "accessible"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/accessible/src/html/nsHTMLSelectAccessible.cpp&rev=1.33&mark=1233#1228
Deref-error: "accessible"
Attachment #135885 -
Flags: superreview?(roc)
Attachment #135885 -
Flags: review?(roc)
Attachment #135885 -
Flags: superreview?(roc)
Attachment #135885 -
Flags: superreview+
Attachment #135885 -
Flags: review?(roc)
Attachment #135885 -
Flags: review+
Comment 2•22 years ago
|
||
Why hasn't this patch been in trunk?
because the trunk is frozen, i'm traveling and there's no point spending time on
it, i'll commit when i'm home and the tree is open.
Status: NEW → ASSIGNED
checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•