Bug 226155 DRefTool analysis for accessible files r=roc sr=roc